--- a/src/main/resources/html/register.html
+++ b/src/main/resources/html/register.html
@@ -9,18 +9,58 @@
 
 <body class="login">
 <div class="content">
-  <h3 class="form-title">Get otp info</h3>
+  <h3 class="form-title">User register</h3>
   <div class="form-group">
-    <label>
+    <label class="contorl-label">
       telephone num
     </label>
     <div>
       <input class="form-control" type="text" placeholder="telephone num here" name="telephone" id="telephone">
     </div>
   </div>
+  <div class="form-group">
+    <label class="contorl-label">
+      Verification code
+    </label>
+    <div>
+      <input class="form-control" type="text" placeholder="Verification code" name="otpCode" id="otpCode">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="contorl-label">
+      user name
+    </label>
+    <div>
+      <input class="form-control" type="text" placeholder="User name" name="name" id="name">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="contorl-label">
+      Gender
+    </label>
+    <div>
+      <input class="form-control" type="text" placeholder="gender" name="gender" id="gender">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="contorl-label">
+      Age
+    </label>
+    <div>
+      <input class="form-control" type="text" placeholder="age" name="age" id="age">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="contorl-label">
+      Password
+    </label>
+    <div>
+      <input class="form-control" type="Password" placeholder="Password" name="Password" id="Password">
+    </div>
+  </div>
   <div class="form-actions">
-    <button class="btn blue" id="getotp" type= >
-      Get otp message
+    <button class="btn blue" id="getotp" type="submit">
+      Submit
     </button>
   </div>
 </div>
@@ -46,7 +86,6 @@
                     success:function(data) {
                         if (data.status == "success") {
                             alert("otp is sent to your telephone. Please check it");
-                            window.location.href="register.html";
                         } else {
                             alert("ope send failed. Reason is " + data.data.errMsg)
                         }
